# LoginLanguish

./: .codedocs  .gitignore  BetaReleaseNotes.md  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.bak  README.md  codecov.yml  package-lock.json  vcpkg.json
.github/workflows/: analysis.yml  checks.yml  cmake.yml
assets/: LoginLanguish.icns  app.html  test.html  testscript.js
assets/completion_screen/MP3/: Somebody-I-Used-to-Know.m4a  Somebody-I-Used-to-Know.mov
assets/datasets/celeb-faces/: rename_imgs.bat
assets/datasets/countries/: _country_data.csv
cmake/: App.cmake  Info.plist.in  assets.cmake  configuration.cmake  fetching.cmake
doxygen/html/: compatibility__utils_8cpp.html  compatibility__utils_8h.html  compatibility__utils_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8h.html  main_8h_source.html  utils_8cpp.html  utils_8h.html  utils_8h_source.html
doxygen/html/search/: files_0.js  functions_0.js  searchdata.js
doxygen/latex/: compatibility__utils_8cpp.tex  compatibility__utils_8h.tex  compatibility__utils_8h_source.tex  files.tex  main_8cpp.tex  main_8h.tex  main_8h_source.tex  refman.tex  utils_8cpp.tex  utils_8h.tex  utils_8h_source.tex
scripts/map_dataset_downloader/: .gitignore  index.ts  package.json
src/: CMakeLists.txt  Game.cpp  Game.h  compatibility_utils.cpp  compatibility_utils.h  main.cpp  main.h  utils.cpp  utils.h
src/game/: CMakeLists.txt  game_manager.cpp  game_manager.h  password_validator.cpp  password_validator.h
src/game/stages/: credentials_stage.cpp  credentials_stage.h  details_stage.cpp  details_stage.h  dwayne_stage.cpp  dwayne_stage.h  end_stage.cpp  end_stage.h  extras_stage.cpp  extras_stage.h  image_captcha_stage.cpp  image_captcha_stage.h  name_stage.cpp  name_stage.h  stage.cpp  stage.h  txt_captcha_stage.cpp  txt_captcha_stage.h
src/main/: CMakeLists.txt  fields.cpp  fields.h  main.cpp  main.h
src/test/: test.cpp  test.h
src/utils/: CMakeLists.txt  compatibility_utils.cpp  compatibility_utils.h  file_utils.cpp  file_utils.h  parse_args.cpp  parse_args.h  password_utils.cpp  password_utils.h  preprocessor_vars.h  random_utils.cpp  random_utils.h  string_utils.cpp  string_utils.h  utils.cpp  utils.h
static_site/: .eslint.json  README.md  bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
static_site/src/: app.tsx  index.html
static_site/src/components/: Dwayne.tsx  End.tsx  ImageCaptcha.tsx  LoginPage.tsx  TermsAndConditions.tsx  TextCaptcha.tsx  TextField.tsx  ValidationBox.tsx
static_site/src/scripts/: cpp-bindings.ts  login-flow.ts  useBindings.ts  useSmoothUpdate.ts
static_site/src/styles/: main.css
tests/: CMakeLists.txt  credentials_stage_test.cpp  extras_stage_test.cpp  image_captcha_stage_test.cpp  name_stage_test.cpp  password_utils_test.cpp  password_validator_test.cpp  random_utils_test.cpp  string_utils_test.cpp  test.cpp  txt_captcha_stage_test.cpp
webview_test/: CMakeListsNew.txt  basic.cpp
